--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.2.0",
     "tsparticles": "^3.9.1",
+    "tsparticles-slim": "^2.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
